@@ -41,6 +41,10 @@ extern cf_function(cf_NameWindow);
 extern cf_function(cf_AppWindow);
 extern cf_function(cf_NextWindow);
 extern cf_function(cf_PrevWindow);
+extern cf_function(cf_NextVisibleWindow);
+extern cf_function(cf_PrevVisibleWindow);
+extern cf_function(cf_NextWSWindow);
+extern cf_function(cf_PrevWSWindow);
 extern cf_function(cf_VisibleWindow);
 extern cf_function(cf_UniconicWindow);
 extern cf_function(cf_IconicWindow);
